--- a/public/css/application.css
+++ b/public/css/application.css
@@ -23,10 +23,11 @@ html,body {
 	/*background-color: red*/
 	margin: auto;
 	/*margin-right: auto;*/
-	width: 100%;
-	/*height: %;*/
+	/*width: 5%;*/
+	height: 100%;
+	float: left;
 	/*padding: 20px;*/
-	border: 1px solid black;
+	/*border: 1px solid black;*/
 	box-sizing: border-box;
 	/*flex: 1 1 auto;*/
 }
