--- a/public/css/application.css
+++ b/public/css/application.css
@@ -15,7 +15,7 @@ html,body {
 	width: 5%;
 	height: 80%;
 	padding: 0px;
-	border: 1px solid black;
+	/*border: 1px solid black;*/
 	box-sizing: border-box;
 }
 
